# sensevoice-rs

./: .gitmodules  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
examples/: basic.rs  simpletest.rs  stream.rs
src/: fsmn.rs  fsmn_vad.rs  lib.rs  main.rs  silero_vad.rs  wavfrontend.rs
