[package]
name = "sensevoice-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust-based, SenseVoiceSmall "
homepage = "https://github.com/darkautism/sensevoice-rs"
license = "MIT"

[dependencies]
kaldi-fbank-rust-kautism = "0.1.0"
rknn-rs = "0.1.0"
hound = "3.5.1"
ndarray = { version="0.16.1", features=["rayon"]}
ndarray-npy = "0.9.1"
sentencepiece = "0.11.2"
ndarray-stats = "0.6.0"
rayon = "1.10.0"
hf-hub = "0.4.2"
regex = "1.11.1"


[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "2.0.0-rc.9", features = ["coreml", "ndarray", "load-dynamic"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
ort = { version = "2.0.0-rc.9", features = ["ndarray"] }
