[package]
name = "sensevoice-rs"
version = "0.1.1"
edition = "2021"
description = "A Rust-based, SenseVoiceSmall "
homepage = "https://github.com/darkautism/sensevoice-rs"
license = "MIT"

[patch.crates-io]
rknn-rs = { path = "../rknn-rs"}
#voice_activity_detector = { path = "../voice_activity_detector"}

[dependencies]
kaldi-fbank-rust-kautism = "0.1.0"
rknn-rs = "0.1.1"
hound = "3.5.1"
ndarray = { version="0.16.1", features=["rayon"]}
ndarray-npy = "0.9.1"
sentencepiece = "0.11.2"
ndarray-stats = "0.6.0"
rayon = "1.10.0"
hf-hub = "0.4.2"
regex = "1.11.1"
voice_activity_detector = { version = "0.2.0", optional = true }
futures = { version = "0.3.31", optional = true }
async-stream = { version = "0.3.6", optional = true }


[features]
default = []
stream = ["futures", "async-stream", "voice_activity_detector"]

[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "2.0.0-rc.9", features = ["coreml", "ndarray", "load-dynamic"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
ort = { version = "2.0.0-rc.9", features = ["ndarray"] }
